[package]
name = "primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node low-level primitives."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.4.1"
bstringify = "0.1.2"
serde = { version = "1.0.192", default-features = false, features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive", "max-encoded-len"
] }
enumflags2 = { version = "0.7.8", features = ["serde"] }
num_enum = { version = "0.7.0", default-features = false }
paste = "1.0"

scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"enumflags2/serde",
	"serde/std",
	"num_enum/std",
]
